--- a/Buoi-3/btvnB3/style.css
+++ b/Buoi-3/btvnB3/style.css
@@ -1,4 +1,5 @@
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
+#list{
+    display: flex;
+    justify-content: space-around;
+    width: 100vw;
 }
